# Filmvert

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakeRC.cmake  LICENSE.MIT  README.md  build.bat  build.sh  build_linux.sh  build_mac.sh  build_win.sh  conanfile.py  licenses.py
Icon/: AppIcon.icns
Research/: FilmInversionWorkflow.nk
conan-recipes/exiv2/: conanfile.py
conan-recipes/opencolorio/: conandata.yml  conanfile.py
conan-recipes/opencolorio/patches/: 2.4.2-0002-fix-glsl-helper.patch
src/: Info.plist.in  fileIO.cpp  grainParams.cpp  grainParams.h  histogram.cpp  imageIO.cpp  imageIO.h  lodepng.h  logger.cpp  logger.h  macOSFile.mm  main.cpp  metalGPU.cpp  metalGPU.h  ocioProcessor.cpp  ocioProcessor.h  osMacros.h  preferences.cpp  preferences.h  releaseNotes.h  renderParams.h  roll.cpp  roll.h  structs.h  threadPool.cpp  threadPool.h  utils.cpp  utils.h  window.cpp  window.h
src/gpu/: Filmvert.metal  glslKernels.h  gpu.cpp  gpu.h  gpuStructs.h  histogram.cpp  metalGPU.cpp  metalGPU.h
src/image/: exifUtils.cpp  exifUtils.h  image.cpp  image.h  imageBuffers.cpp  imageIO.cpp  imageIO.h  imageMeta.cpp  imageMeta.h  imageParams.cpp  imageParams.h  imageProcessing.cpp
src/misc/: logger.h  macOSFile.mm  metaUtils.cpp  metaUtils.h  preferences.cpp  preferences.h  releaseNotes.h  renderParams.h  structs.h  updateCheck.cpp  updateCheck.h  utils.cpp  utils.h
src/ocio/: ocioProcessor.cpp  ocioProcessor.h
src/roll/: roll.cpp  roll.h  rollBuffers.cpp  rollContactSheet.cpp  rollIO.cpp  rollMeta.cpp  rollState.cpp
src/state/: state.cpp  state.h
src/tether/: tether.cpp  tether.h  tetherParam.cpp
src/window/: window.cpp  window.h  windowCopyPaste.cpp  windowCrop.cpp  windowCurves.cpp  windowHistogram.cpp  windowHistogram.h  windowIO.cpp  windowIOPopups.cpp  windowImageView.cpp  windowKeys.cpp  windowMenuBar.cpp  windowMeta.cpp  windowMetaPopups.cpp  windowParamView.cpp  windowPopups.cpp  windowPreferences.cpp  windowRender.cpp  windowSDL.cpp  windowShortcutPopups.cpp  windowTether.cpp  windowThumbView.cpp  windowUtils.cpp  windowUtils.h
tests/: test_imageBuffers.cpp  test_imageCurve.cpp  test_imageIO.cpp  test_imageParams.cpp  test_imageProcessing.cpp  test_metaUtils.cpp  test_updateCheck.cpp  test_utils.cpp
